--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+:root{
+  --primary-color: rgb(218, 198, 237);
+  --secondary-color: rgb(103, 58, 183);
+  --input-error: rgb(254, 105, 99);
+}
+
+html, body { 
+  height: 100%; 
+  color: var(--secondary-color); 
+  background-color: rgb(51, 51, 51);
+}
+
+body { 
+  margin: 0; 
+  font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
+
+.mdc-text-field--invalid{
+  color: var(--input-error);
+}
